--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 </head>
 <body class="light-theme default-font">
     <div class="container">
+        <a href="https://bchuang0925.github.io/wordtype.github.io">New Version</a>
         <h1>Typing Test</h1>
         <div id="text-to-type"></div>
         <textarea id="input-field" placeholder="Start typing here..."></textarea>
